fixing alignement
fixing alignement

--- a/my-app/src/pages/PaymentPage/PaymentPage.css
+++ b/my-app/src/pages/PaymentPage/PaymentPage.css
@@ -6,6 +6,7 @@
   
 }
 
+
 .left-container {
   margin-top: 100px;
   width: 600px;
@@ -85,6 +86,7 @@ label {
   display: flex;
   align-items: center; 
   gap: 1px; 
+  
  
   
 }
@@ -105,6 +107,7 @@ label {
   font-size: 1.2rem;
   border-collapse: collapse;
  
+ 
   
 }
 
@@ -122,7 +125,10 @@ label {
   height: 45px; 
   width: 150px; 
   object-fit: contain;
-  float: left;
+  margin-right: -20px;
+
+ 
+  
 
 }
 
